--- a/DeploymentManager/DeploymentManager.csproj
+++ b/DeploymentManager/DeploymentManager.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>netcoreapp2.1</TargetFramework>
@@ -26,6 +26,6 @@
     <PackageReference Include="Improbable.CoreSdk" Version="13.5.0" />
     <PackageReference Include="Mono.Options" Version="5.3.0.1" />
     <PackageReference Include="Newtonsoft.Json" Version="12.0.1" />
-    <PackageReference Include="Improbable.SpatialOS.Platform" Version="13.5.1" />
+    <PackageReference Include="Improbable.SpatialOS.Platform" Version="13.8.1" />
   </ItemGroup>
 </Project>
